<resources>
    <string name="app_name">TruckPad</string>
    <string name="text_no_history">No shipping history. \nCalculate a new shipping to display it here.</string>
    <string name="shipping_history">Shipping history</string>
    <string name="calc_new_shipping">Calculate a new shipping</string>
    <string name="calc_your_shipping">Calc your shipping</string>
    <string name="origin">Origin</string>
    <string name="destiny">Destiny</string>
    <string name="axes">Axes (min 2, max 9)</string>
    <string name="fuel_consumption">Fuel Consumption (Km/L)</string>
    <string name="fuel_price">Diesel price (R$)</string>
    <string name="close">Close</string>
    <string name="ERROR_UNEXPECTED">An unexpected error occurred</string>
    <string name="locale_error">Unable to communicate with location services, fill in origin manually.</string>
    <string name="wrong_city_name">Select a city from the list</string>
    <string name="ERROR_SHIPPING_VALIDATION">Fill in fields correctly</string>
    <string name="shipping_details">Shipping Details</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="duration">Duration: %1$s</string>
    <string name="toll_count">Tolls: %1$s</string>
    <string name="toll_cost">Toll total cost: %1$s</string>
    <string name="diesel_consumption">Diesel consumption: %1$s</string>
    <string name="diesel_total_price">Diesel total price: %1$s</string>
    <string name="price_per_load">Price per load</string>
    <string name="route">Route</string>
</resources>